Testing Github Branch

--- a/index.html
+++ b/index.html
@@ -395,6 +395,9 @@
 
 
         <script>
+		
+			alert("GIT branch test");
+		
             lexicon = new lexicon();
             lexicon.populate();
 
